<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    android:background="@drawable/background_gradient_list"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/student_outline"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="55dp"
        android:contentDescription="@string/this_is_the_student_outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/student" />

    <Button
        android:id="@+id/button_signup"
        android:layout_width="225dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_background"
        android:hapticFeedbackEnabled="false"
        android:shadowColor="#000000"
        android:text="@string/sign_up"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName" />

    <Button
        android:id="@+id/button_signin"
        android:layout_width="225dp"
        android:layout_height="65dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_background"
        android:shadowColor="#000000"
        android:text="@string/sign_in"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_signup" />

    <TextView
        android:id="@+id/madeBy"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/made_by_team_bright"
        android:textAlignment="center"
        android:textColor="#80FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="UniRO"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_outline" />

</androidx.constraintlayout.widget.ConstraintLayout>